--- a/src/common/styles/animations.css
+++ b/src/common/styles/animations.css
@@ -29,3 +29,33 @@
 	animation-fill-mode: both;
 	animation-name: fadeOut;
 }
+
+@keyframes slideInDown {
+	from {
+		transform: translateY(-100%);
+	}
+	to {
+		transform: translateY(0);
+	}
+}
+
+.slideInDown {
+	animation-duration: var(--short-animation-duration);
+	animation-fill-mode: both;
+	animation-name: slideInDown;
+}
+
+@keyframes slideOutUp {
+	from {
+		transform: translateY(0);
+	}
+	to {
+		transform: translateY(-100%);
+	}
+}
+
+.slideOutUp {
+	animation-duration: var(--short-animation-duration);
+	animation-fill-mode: both;
+	animation-name: slideOutUp;
+}
