--- a/src/components/titlePane/styles/titlePane.css
+++ b/src/components/titlePane/styles/titlePane.css
@@ -2,11 +2,17 @@
 
 .title {
 	background-color: var(--title-bar-bg);
+	border-color: var(--title-bar-bg);
+	border-style: solid;
+	border-width: 1px;
 	color: var(--title-bar-color);
 	font-size: var(--title-font-size);
 	padding: 5px;
 }
 
 .content {
+	border-color: var(--title-bar-bg);
+	border-style: solid;
+	border-width: 1px;
 	padding: var(--content-padding);
 }
