--- a/src/common/styles/animations.css
+++ b/src/common/styles/animations.css
@@ -32,10 +32,10 @@
 
 @keyframes slideInDown {
 	from {
-		transform: translateY(-100%);
+		max-height: 0;
 	}
 	to {
-		transform: translateY(0);
+		max-height: 300px;
 	}
 }
 
@@ -47,10 +47,10 @@
 
 @keyframes slideOutUp {
 	from {
-		transform: translateY(0);
+		max-height: 300px;
 	}
 	to {
-		transform: translateY(-100%);
+		max-height: 0;
 	}
 }
 
