--- a/src/common/styles/variables.css
+++ b/src/common/styles/variables.css
@@ -21,6 +21,7 @@
 	--title-bar-font-size: 20px;
 	--container-padding: 14px 35px;
 	--container-padding-thin: 14px;
+	--title-padding: 5px;
 	--subtle-shadow: 0 0 7px 0px rgba(0, 0, 0, 0.25);
 	--rounded-corners: 2px;
 	--short-animation-duration: .2s;
