--- a/src/common/styles/variables.css
+++ b/src/common/styles/variables.css
@@ -13,8 +13,10 @@
 	--dojo-success-color: var(--dojo-green);
 
 	--base-font: 14px/1 sans-serif;
+	--border-width-thin: 1px;
 	--content-padding: 14px 35px;
 	--title-font-size: 20px;
+	--title-padding: 5px;
 	--subtle-shadow: 0 0 7px 0px rgba(0, 0, 0, 0.25);
 	--rounded-corners: 2px;
 	--short-animation-duration: .2s;
