--- a/src/common/styles/variables.css
+++ b/src/common/styles/variables.css
@@ -20,6 +20,7 @@
 	--input-font-size: 14px;
 	--container-padding: 14px 35px;
 	--title-bar-font-size: 20px;
+	--title-padding: 5px;
 	--subtle-shadow: 0 0 7px 0px rgba(0, 0, 0, 0.25);
 	--rounded-corners: 2px;
 	--short-animation-duration: .2s;
