--- a/src/common/styles/widgets.css
+++ b/src/common/styles/widgets.css
@@ -8,3 +8,4 @@
 @import '../../checkbox/styles/checkbox.css';
 @import '../../radio/styles/radio.css';
 @import '../../slider/styles/slider.css';
+@import '../../titlepane/styles/titlePane.css';
