--- a/src/titlepane/styles/titlePane.css
+++ b/src/titlepane/styles/titlePane.css
@@ -30,10 +30,5 @@
 	border-style: solid;
 	border-width: var(--border-width-thin);
 	padding: var(--content-padding);
-	transform: translateY(-100%);
-	transition: transform ease-in-out var(--short-animation-duration);
-}
-
-.open {
-	transform: translateY(0%);
+	transition: margin-top ease-in-out var(--short-animation-duration);
 }
