:construction: Accordion updates

--- a/src/accordion/styles/accordion.css
+++ b/src/accordion/styles/accordion.css
@@ -1,6 +1,6 @@
-@import '../../../styles/variables.css';
+@import '../../common/styles/variables.css';
 
-.accordion {
+.root {
 	border-color: var(--dojo-shade-gray);
 	border-style: solid;
 	border-width: var(--border-width-thin);
